8341692: Implement JEP 490: ZGC: Remove the Non-Generational Mode