@@ -27,47 +27,27 @@ package gc.stress.gcbasher;
 import java.io.IOException;
 
 /*
- * @test TestGCBasherWithZGenerational
+ * @test TestGCBasherWithZ
  * @key stress
  * @library /
- * @requires vm.gc.ZGenerational
+ * @requires vm.gc.Z
  * @requires vm.flavor == "server" & !vm.emulatedClient
  * @summary Stress ZGC
- * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx384m -server -XX:+UseZGC -XX:+ZGenerational  gc.stress.gcbasher.TestGCBasherWithZ 120000
- */
-/*
- * @test TestGCBasherWithZSinglegen
- * @key stress
- * @library /
- * @requires vm.gc.ZSinglegen
- * @requires vm.flavor == "server" & !vm.emulatedClient
- * @summary Stress ZGC
- * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx384m -server -XX:+UseZGC -XX:-ZGenerational gc.stress.gcbasher.TestGCBasherWithZ 120000
+ * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx384m -server -XX:+UseZGC gc.stress.gcbasher.TestGCBasherWithZ 120000
  */
 
 /*
- * @test TestGCBasherDeoptWithZGenerational
+ * @test TestGCBasherDeoptWithZ
  * @key stress
  * @library /
- * @requires vm.gc.ZGenerational
+ * @requires vm.gc.Z
  * @requires vm.flavor == "server" & !vm.emulatedClient & vm.opt.ClassUnloading != false
  * @summary Stress ZGC with nmethod barrier forced deoptimization enabled.
- * @run main/othervm/timeout=200 -Xlog:gc*=info,nmethod+barrier=trace -Xmx384m -server -XX:+UseZGC -XX:+ZGenerational
+ * @run main/othervm/timeout=200 -Xlog:gc*=info,nmethod+barrier=trace -Xmx384m -server -XX:+UseZGC
  *   -XX:+UnlockDiagnosticVMOptions -XX:+DeoptimizeNMethodBarriersALot -XX:-Inline
  *   gc.stress.gcbasher.TestGCBasherWithZ 120000
  */
 
-/*
- * @test TestGCBasherDeoptWithZSinglegen
- * @key stress
- * @library /
- * @requires vm.gc.ZSinglegen
- * @requires vm.flavor == "server" & !vm.emulatedClient & vm.opt.ClassUnloading != false
- * @summary Stress ZGC with nmethod barrier forced deoptimization enabled.
- * @run main/othervm/timeout=200 -Xlog:gc*=info,nmethod+barrier=trace -Xmx384m -server -XX:+UseZGC -XX:-ZGenerational
- *   -XX:+UnlockDiagnosticVMOptions -XX:+DeoptimizeNMethodBarriersALot -XX:-Inline
- *   gc.stress.gcbasher.TestGCBasherWithZ 120000
- */
 public class TestGCBasherWithZ {
     public static void main(String[] args) throws IOException {
         TestGCBasher.main(args);
