@@ -25,24 +25,15 @@
 package gc.stress.gcold;
 
 /*
- * @test TestGCOldWithZGenerational
+ * @test TestGCOldWithZ
  * @key randomness
  * @library / /test/lib
- * @requires vm.gc.ZGenerational
+ * @requires vm.gc.Z
  * @summary Stress the Z
- * @run main/othervm -Xmx384M -XX:+UseZGC -XX:+ZGenerational gc.stress.gcold.TestGCOldWithZ 50 1 20 10 10000
- * @run main/othervm -Xmx256m -XX:+UseZGC -XX:+ZGenerational gc.stress.gcold.TestGCOldWithZ 50 5 20 1 5000
+ * @run main/othervm -Xmx384M -XX:+UseZGC gc.stress.gcold.TestGCOldWithZ 50 1 20 10 10000
+ * @run main/othervm -Xmx256m -XX:+UseZGC gc.stress.gcold.TestGCOldWithZ 50 5 20 1 5000
  */
 
-/*
- * @test TestGCOldWithZSinglegen
- * @key randomness
- * @library / /test/lib
- * @requires vm.gc.ZSinglegen
- * @summary Stress the Z
- * @run main/othervm -Xmx384M -XX:+UseZGC -XX:-ZGenerational gc.stress.gcold.TestGCOldWithZ 50 1 20 10 10000
- * @run main/othervm -Xmx256m -XX:+UseZGC -XX:-ZGenerational gc.stress.gcold.TestGCOldWithZ 50 5 20 1 5000
- */
 public class TestGCOldWithZ {
     public static void main(String[] args) {
         TestGCOld.main(args);
